tests/error/empty_member_ptr.gw
#! [contains] NullPtrException
class C
{
	typedef void test();
	test t;
}
<<< C c >>>;
<<< c.t >>>;
c.t();
